// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structure/<ino-dialog> ClosingAction smoke-test 1`] = `
<div id="root-inner">
  <div class="story-dialog">
    <ino-button class="open-dialog-btn"
                data-dialog-id="demo-action-dialog"
    >
      Open Dialog
    </ino-button>
    <ino-dialog id="demo-action-dialog"
                open="false"
                fullwidth="false"
                dismissible="true"
                attach-to=".story-dialog"
    >
      <div class="ino-dialog-header">
        <div class="ino-dialog-title">
          <h3>
            Select your favourite characters
          </h3>
        </div>
        <ino-icon-button icon="close"
                         data-ino-dialog-action="close"
        >
        </ino-icon-button>
      </div>
      <div class="ino-dialog-content">
        <ino-segment-group value="2"
                           id="dense-segment-grp"
        >
          <ino-segment-button dense
                              value="1"
          >
            Morty
          </ino-segment-button>
          <ino-segment-button dense
                              value="2"
          >
            Pickle Rick
          </ino-segment-button>
          <ino-segment-button dense
                              value="3"
          >
            Squanchy
          </ino-segment-button>
          <ino-segment-button dense
                              value="4"
          >
            Beth
          </ino-segment-button>
          <ino-segment-button dense
                              value="5"
          >
            Jerry
          </ino-segment-button>
          <ino-segment-button dense
                              value="6"
          >
            Summer
          </ino-segment-button>
        </ino-segment-group>
      </div>
      <div class="ino-dialog-footer">
        <ino-button icon="remove"
                    data-ino-dialog-action="cancel"
                    fill="outline"
                    color-scheme="secondary"
        >
          Cancel
        </ino-button>
        <ino-button icon="mail"
                    data-ino-dialog-action="submit"
        >
          Submit
        </ino-button>
      </div>
    </ino-dialog>
  </div>
</div>
`;

exports[`Structure/<ino-dialog> Dismissible smoke-test 1`] = `
<div id="root-inner">
  <div class="story-dialog">
    <ino-button class="open-dialog-btn hydrated"
                data-dialog-id="undefined"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Open Dialog
        </span>
      </button>
    </ino-button>
    <ino-dialog id="undefined"
                open="false"
                fullwidth="false"
                dismissible="true"
                attach-to=".story-dialog"
                class="hydrated"
    >
      <div class="ino-dialog-header">
        <div class="ino-dialog-title">
          <h3>
            Select your favourite characters
          </h3>
        </div>
        <ino-icon-button icon="close"
                         data-ino-dialog-action="close"
                         class="ino-icon-button--color-scheme-primary hydrated"
        >
          <button class="mdc-icon-button mdc-ripple-upgraded--unbounded"
                  type="button"
          >
            <div class="mdc-icon-button__ripple">
            </div>
            <span class="mdc-icon-button__icon">
              <ino-icon class="ino-icon--color-scheme-primary hydrated">
              </ino-icon>
            </span>
          </button>
        </ino-icon-button>
      </div>
      <div class="ino-dialog-content">
        <ino-segment-group value="2"
                           id="ino-segment-group-id__h8wb1c27j"
                           class="hydrated"
        >
          <ino-segment-button dense
                              value="1"
                              class="hydrated"
          >
            Morty
          </ino-segment-button>
          <ino-segment-button dense
                              value="2"
                              class="hydrated"
          >
            Pickle Rick
          </ino-segment-button>
          <ino-segment-button dense
                              value="3"
                              class="hydrated"
          >
            Squanchy
          </ino-segment-button>
          <ino-segment-button dense
                              value="4"
                              class="hydrated"
          >
            Beth
          </ino-segment-button>
          <ino-segment-button dense
                              value="5"
                              class="hydrated"
          >
            Jerry
          </ino-segment-button>
          <ino-segment-button dense
                              value="6"
                              class="hydrated"
          >
            Summer
          </ino-segment-button>
        </ino-segment-group>
      </div>
      <div class="ino-dialog-footer">
        <ino-button icon="remove"
                    data-ino-dialog-action="cancel"
                    fill="outline"
                    color-scheme="secondary"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Cancel
            </span>
          </button>
        </ino-button>
        <ino-button icon="mail"
                    data-ino-dialog-action="submit"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Submit
            </span>
          </button>
        </ino-button>
      </div>
    </ino-dialog>
  </div>
</div>
`;

exports[`Structure/<ino-dialog> FullWidth smoke-test 1`] = `
<div id="root-inner">
  <div class="story-dialog">
    <ino-button class="open-dialog-btn hydrated"
                data-dialog-id="undefined"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Open Dialog
        </span>
      </button>
    </ino-button>
    <ino-dialog id="undefined"
                open="false"
                fullwidth="true"
                dismissible="false"
                attach-to=".story-dialog"
                class="ino-dialog--fullwidth hydrated"
    >
      <div class="ino-dialog-header">
        <div class="ino-dialog-title">
          <h3>
            Select your favourite characters
          </h3>
        </div>
        <ino-icon-button icon="close"
                         data-ino-dialog-action="close"
                         class="ino-icon-button--color-scheme-primary hydrated"
        >
          <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                  type="button"
                  style="--mdc-ripple-fg-size:0px; --mdc-ripple-fg-scale:NaN; --mdc-ripple-left:0px; --mdc-ripple-top:0px;"
          >
            <div class="mdc-icon-button__ripple">
            </div>
            <span class="mdc-icon-button__icon">
              <ino-icon class="ino-icon--color-scheme-primary hydrated">
              </ino-icon>
            </span>
          </button>
        </ino-icon-button>
      </div>
      <div class="ino-dialog-content">
        <ino-segment-group value="2"
                           id="ino-segment-group-id__los3gxm1s"
                           class="hydrated"
        >
          <ino-segment-button dense
                              value="1"
                              class="hydrated"
          >
            Morty
          </ino-segment-button>
          <ino-segment-button dense
                              value="2"
                              class="hydrated ino-segment-button--checked"
                              checked
          >
            Pickle Rick
          </ino-segment-button>
          <ino-segment-button dense
                              value="3"
                              class="hydrated"
          >
            Squanchy
          </ino-segment-button>
          <ino-segment-button dense
                              value="4"
                              class="hydrated"
          >
            Beth
          </ino-segment-button>
          <ino-segment-button dense
                              value="5"
                              class="hydrated"
          >
            Jerry
          </ino-segment-button>
          <ino-segment-button dense
                              value="6"
                              class="hydrated"
          >
            Summer
          </ino-segment-button>
        </ino-segment-group>
      </div>
      <div class="ino-dialog-footer">
        <ino-button icon="remove"
                    data-ino-dialog-action="cancel"
                    fill="outline"
                    color-scheme="secondary"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Cancel
            </span>
          </button>
        </ino-button>
        <ino-button icon="mail"
                    data-ino-dialog-action="submit"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Submit
            </span>
          </button>
        </ino-button>
      </div>
    </ino-dialog>
  </div>
</div>
`;

exports[`Structure/<ino-dialog> Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-dialog">
    <ino-button class="open-dialog-btn hydrated"
                data-dialog-id="undefined"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Open Dialog
        </span>
      </button>
    </ino-button>
    <ino-dialog id="undefined"
                open="false"
                fullwidth="false"
                dismissible="false"
                attach-to=".story-dialog"
                class="hydrated"
    >
      <div class="ino-dialog-header">
        <div class="ino-dialog-title">
          <h3>
            Select your favourite characters
          </h3>
        </div>
        <ino-icon-button icon="close"
                         data-ino-dialog-action="close"
                         class="ino-icon-button--color-scheme-primary hydrated"
        >
          <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                  type="button"
                  style="--mdc-ripple-fg-size:0px; --mdc-ripple-fg-scale:NaN; --mdc-ripple-left:0px; --mdc-ripple-top:0px;"
          >
            <div class="mdc-icon-button__ripple">
            </div>
            <span class="mdc-icon-button__icon">
              <ino-icon class="hydrated ino-icon--color-scheme-primary">
              </ino-icon>
            </span>
          </button>
        </ino-icon-button>
      </div>
      <div class="ino-dialog-content">
        <ino-segment-group value="2"
                           id="ino-segment-group-id__6td542ksm"
                           class="hydrated"
        >
          <ino-segment-button dense
                              value="1"
                              class="hydrated"
          >
            Morty
          </ino-segment-button>
          <ino-segment-button dense
                              value="2"
                              class="hydrated ino-segment-button--checked"
                              checked
          >
            Pickle Rick
          </ino-segment-button>
          <ino-segment-button dense
                              value="3"
                              class="hydrated"
          >
            Squanchy
          </ino-segment-button>
          <ino-segment-button dense
                              value="4"
                              class="hydrated"
          >
            Beth
          </ino-segment-button>
          <ino-segment-button dense
                              value="5"
                              class="hydrated"
          >
            Jerry
          </ino-segment-button>
          <ino-segment-button dense
                              value="6"
                              class="hydrated"
          >
            Summer
          </ino-segment-button>
        </ino-segment-group>
      </div>
      <div class="ino-dialog-footer">
        <ino-button icon="remove"
                    data-ino-dialog-action="cancel"
                    fill="outline"
                    color-scheme="secondary"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Cancel
            </span>
          </button>
        </ino-button>
        <ino-button icon="mail"
                    data-ino-dialog-action="submit"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Submit
            </span>
          </button>
        </ino-button>
      </div>
    </ino-dialog>
  </div>
</div>
`;
